fix!: change from GetVersions() to GetVersion()
